--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Logs
 logs
+*.pdf
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -40,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+build/
 
 # TypeScript v1 declaration files
 typings/
@@ -103,3 +105,4 @@ dist
 # TernJS port file
 .tern-port
 .DS_Store
+build/index.js
