--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"url": "https://github.com/leon123858/AID/issues"
 	},
 	"homepage": "https://github.com/leon123858/AID#readme",
+	"dependencies": {},
 	"devDependencies": {
 		"@types/chai": "^4.3.4",
 		"@types/mocha": "^10.0.1",
