--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
 		"url": "https://github.com/leon123858/AID/issues"
 	},
 	"homepage": "https://github.com/leon123858/AID#readme",
-	"dependencies": {},
+	"dependencies": {
+		"@types/express": "^4.17.17",
+		"bcoin": "leon123858/OurCoin#main",
+		"express": "^4.18.2"
+	},
 	"devDependencies": {
 		"@types/chai": "^4.3.4",
 		"@types/mocha": "^10.0.1",
