--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 	"dependencies": {
 		"@types/express": "^4.17.17",
 		"bcoin": "leon123858/OurCoin#main",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"mongodb": "^5.0.1"
 	},
 	"devDependencies": {
 		"@types/chai": "^4.3.4",
