--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
 	"dependencies": {
 		"@types/express": "^4.17.17",
 		"bcoin": "leon123858/OurCoin#main",
+		"body-parser": "^1.20.2",
 		"express": "^4.18.2",
-		"mongodb": "^5.0.1"
+		"mongodb": "^5.0.1",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"@types/chai": "^4.3.4",
